--- a/index.html
+++ b/index.html
@@ -2275,9 +2275,9 @@ client.create(
         <div id="tab-navi">
 
           <ul>
-            <li class="ui-state-default"><a href="https://github.com/telapi/telapi-node.js/zipball/master">Download ZIP File &#187;</a></li>
-            <li class="ui-state-default"><a href="https://github.com/telapi/telapi-node.js/tarball/master">Download TAR Ball &#187;</a></li>
-            <li class="ui-state-default"><a href="https://github.com/telapi/telapi-node.js">View On GitHub &#187;</a></li>
+            <li class="ui-state-default"><a href="https://github.com/telapi/telapi-nodejs/zipball/master">Download ZIP File &#187;</a></li>
+            <li class="ui-state-default"><a href="https://github.com/telapi/telapi-nodejs/tarball/master">Download TAR Ball &#187;</a></li>
+            <li class="ui-state-default"><a href="https://github.com/telapi/telapi-nodejs">View On GitHub &#187;</a></li>
           </ul>
 
                   <ul>
